testsuite/poke.pkl/div-diag-1.pk
/* { dg-do compile } */

var a = "foo" /* { dg-error "invalid operand.*\n.*expected integral or offset" } */
        / 32;
